@@ -2,12 +2,12 @@ Package: patientProfilesVis
 Type: Package
 Title: Visualization of patient profiles
 Version: 0.0-4
-Date: 2018-08-06
+Date: 2018-08-09
 Author: Laure Cougnaud
 Maintainer: Laure Cougnaud <laure.cougnaud@openanalytics.eu>
 Description: This package enables the creation of report with customizable visualization of patient profiles.
 Imports: ggplot2, plyr, cowplot, haven, tools, reshape2, knitr, glpgStyle, grid, viridisLite, dplyr
-Suggests: pander
+Suggests: pander, shiny
 License: Software for Internal Use at Open Analytics NV
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
